# youtube_automation

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.emulation  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.sample  .pre-commit-config.yaml  Dockerfile  Dockerfile.analysis  Dockerfile.emulation  compose.yml  pyproject.toml  run_local_session.py
backend/monitoring/: prometheus.yml  promtail.yml
backend/scripts/: android-bootstrap-macos.sh  android-env.sh  android-preflight.sh  emulation-entrypoint.sh  session_debug_dashboard.py
backend/src/app/: __init__.py  ioc.py  (+3 more)
deploy/: android.env.example  backend.env.example  compose.prod.yml
deploy/gateway/: Dockerfile  nginx.http.conf.template  nginx.https.conf.template  render-nginx-conf.sh
deploy/systemd/: yta-android-display.service  yta-android-worker.service  yta-android.target  yta-appium.service
docs/: android-native-youtube-runtime-plan.md  android-session-efficiency-optimization-plan.md  deploy.md  ubuntu-unified-deploy-blueprint.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/lib/: api-client.ts  api.ts  auth-context.tsx  format.ts  metrics.ts  tokens.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/types/: api.ts
monitoring/: grafana-datasources.yml  loki.yml
ops/: _common.sh  android-bootstrap-ui.sh  android-ui.sh  bootstrap-ubuntu.sh  deploy-remote.sh  deploy.sh  down.sh  logs.sh  package-source.sh  seed-runtime.sh  status.sh  up.sh
scripts/: emulation-entrypoint.sh
src/app/: __init__.py  application.py  ioc.py  settings.py  tiq.py
src/cli/: cli.py
src/tests/: conftest.py
(+291 files in other folders)
